# rtad

./: .gitignore  CMakeLists.txt  readme.md  rtad.c
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  test.yml
example/: CMakeLists.txt  example.c
include/: rtad.h
src/: rtad.c  rtad_def.h
test/: integration_test.c  unit_test.c
